--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,7 @@
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
-		"terminal.integrated.defaultProfile.linux": "bash",
+		"terminal.integrated.defaultProfile.linux": "bash"
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
@@ -37,7 +37,7 @@
 			"moby": true
 		},
 		"kubectl-helm-minikube": {
-			"version": "1.22",
+			"version": "1.23",
 			"helm": "latest",
 			"minikube": "none"
 		}
