--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -14,15 +14,16 @@
     "core-js": "^3.8.3",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.6"
+    "vue-router": "^4.0.6",
+    "vuejs-paginate-next": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "^5.0.0",
     "@vue/cli-service": "^5.0.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
     "eslint": "^8.12.0",
     "eslint-plugin-vue": "^8.0.3"
   },
