--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@microsoft/applicationinsights-web": "^2.8.4",
     "@popperjs/core": "^2.11.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
