--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,17 +7,60 @@
         "script": "serve",
         "isBackground": true,
         "path": "apps/ui",
-        "problemMatcher": [{
+        "problemMatcher": [
+          {
             "base": "$tsc-watch",
             "background": {
-                "activeOnStart": true,
-                "beginsPattern": "Starting development server",
-                "endsPattern": "Compiled successfully"
+              "activeOnStart": true,
+              "beginsPattern": "Starting development server",
+              "endsPattern": "Compiled successfully"
             }
-        }],
+          }
+        ],
         "group": {
-            "kind": "build",
-            "isDefault": true
+          "kind": "build",
+          "isDefault": true
+        }
+      },
+      {
+        "type": "docker-build",
+        "label": "docker-build",
+        "platform": "node",
+        "dockerBuild": {
+          "dockerfile": "${workspaceFolder}/apps/generator/Dockerfile",
+          "context": "${workspaceFolder}/apps/generator",
+          "pull": true
+        },
+        "node": {
+          "package": "${workspaceFolder}/apps/generator/package.json"
+        }
+      },
+      {
+        "type": "docker-run",
+        "label": "docker-run: release",
+        "dependsOn": [
+          "docker-build"
+        ],
+        "platform": "node",
+        "node": {
+          "package": "${workspaceFolder}/apps/generator/package.json"
+        }
+      },
+      {
+        "type": "docker-run",
+        "label": "docker-run: debug",
+        "dependsOn": [
+          "docker-build"
+        ],
+        "dockerRun": {
+          "env": {
+            "DEBUG": "*",
+            "NODE_ENV": "development"
+          }
+        },
+        "node": {
+          "package": "${workspaceFolder}/apps/generator/package.json",
+          "enableDebugging": true
         }
       }
     ]
